# frozen-lake-practice

./: Makefile  PPO.py  PPO_2.py  REINFORCE.py  frozen_lake.py  policy_iteration.py  pyproject.toml  run_ppo.py
models/: ppo_20250422_235829_ep100_reward27.0.pt  ppo_20250422_235906_ep200_reward327.0.pt  ppo_20250423_000057_ep300_reward500.0.pt
models/best/: ppo_20250423_022406_ep100_reward500.0.pt  ppo_20250423_023611_ep200_reward500.0.pt  ppo_20250423_024336_ep100_reward300.0.pt
models/final/: ppo_20250423_021125_ep200_reward48.0.pt  ppo_20250423_022407_ep200_reward500.0.pt  ppo_20250423_023340_ep200_reward25.0.pt  ppo_20250423_023403_ep200_reward25.0.pt  ppo_20250423_024336_ep1000_reward300.0.pt
optimization_results/: results_20250423_024248.json
